--- a/index.html
+++ b/index.html
@@ -28,10 +28,10 @@
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta quos pariatur officia deleniti accusamus quibusdam eligendi modi aut aperiam distinctio, sequi commodi excepturi saepe quo ad animi, corrupti asperiores magnam.
     </p>
     <div class="container2" id="container2">
-        <div class="item2">Componente1</div>
-        <div class="item2">Componente2</div>
-        <div class="item2">Componente3</div>
-        <div class="item2">Componente4</div>
+        <div class="item2"><img src="./img/pizza-queijo.jpg" alt="pizza de queijo"></div>
+        <div class="item2"><img src="./img/pizza-presuntoqueijo.jpg" alt="pizza de queijo e presunto"></div>
+        <div class="item2"><img src="./img/pizza-baconqueijo.jpg" alt="pizza de queijo e banco"></div>
+        <div class="item2"><img src="./img/pizza-italianaqueijo.png" alt="pizza tradicional italiana com queijo"></div>
     </div>
     
 
