algumas pequenas melhorais
usei o background-size: cover; para deixar responsivo a imagem de fundo.

--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
      <nav>
         <ul class="container">
             <li class="item"><a href="#historia">História</a></li>
-            <li class="item"><a href="#container2">Cardapio</a></li>
+            <li class="item"><a href="#cardapio">Cardapio</a></li>
+            <li class="item"><a href="#contato">Sugestão</a></li>
             <li class="item"><a href="https://github.com/AntonioLemos316" target="_blank">GitHub</a></li> 
         </ul>
     </nav>
@@ -27,14 +28,26 @@
     <p>
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta quos pariatur officia deleniti accusamus quibusdam eligendi modi aut aperiam distinctio, sequi commodi excepturi saepe quo ad animi, corrupti asperiores magnam.
     </p>
-    <div class="container2" id="container2">
+    <h2 id="cardapio">Cardapio</h2>
+    <div class="container2">
         <div class="item2"><img src="./img/pizza-queijo.jpg" alt="pizza de queijo"></div>
         <div class="item2"><img src="./img/pizza-presuntoqueijo.jpg" alt="pizza de queijo e presunto"></div>
         <div class="item2"><img src="./img/pizza-baconqueijo.jpg" alt="pizza de queijo e banco"></div>
         <div class="item2"><img src="./img/pizza-italianaqueijo.png" alt="pizza tradicional italiana com queijo"></div>
     </div>
     
-
+    <h2 id="contato">Sugestão</h2>
+    <div class="container3">
+        <textarea class="item3" name="sugestao" id="susgestao" cols="30" rows="10"></textarea>
+    </div>
+    <div class="container3">
+        <label for="">
+            <input type="submit">
+        </label>
+        <label for="">
+            <input type="reset" value="Limpar">
+        </label>
+    </div>
 </main>
 
 <footer>
